# pqc-scanner2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  last_report.json  run_benchmark.py
benchmark/corpus/: generate_fixtures.py  manifest.yaml
benchmark/corpus/cases/: db-cert.db  db-clean.db  f5-hardened.conf  f5-weak.conf  haproxy-hardened.cfg  haproxy-weak.cfg  netscaler-cipher-weak.conf  netscaler-hardened.conf  netscaler-weak.conf  nginx-hardened.conf  nginx-weak.conf  sshd-hardened.conf  sshd-weak.conf
benchmark/corpus/cases/cert-mldsa65/: server.pem
benchmark/corpus/cases/cert-rsa1024/: server.pem
benchmark/corpus/cases/go-clean-sha256/: main.go
benchmark/corpus/cases/go-comment-md5/: main.go
benchmark/corpus/cases/go-md5-real/: main.go
benchmark/corpus/cases/go-string-md5/: main.go
benchmark/corpus/cases/java-comment-md5/: C.java
benchmark/corpus/cases/java-des-real/: B.java
docs/: CICD.md  COMPETITIVE-LANDSCAPE.md  COVERAGE-ROADMAP.md  DEPLOYMENT.md  STATUS.md  TODO.md
docs/references/: malaysia-pqc.md
docs/security/: 2026-06-22-pqcscan-v0.6.9-audit.md
docs/superpowers/plans/: 2026-04-29-pqcscan-v2-mvp-implementation.md  2026-05-07-pqcscan-plan-h-implementation.md
docs/superpowers/specs/: 2026-04-29-pqcscan-v2-design.md  2026-05-07-pqcscan-plan-h-pqc-scope-and-ot-coverage-design.md
packaging/systemd/: pqcscan.service
scripts/: build-binary.sh  build-linux-compat.sh  build-ui-assets.sh  fetch-offline-tools.sh  fetch-osv-snapshot.sh
src/pqcscan/: __init__.py  __main__.py
src/pqcscan/cbom/: builder.py
src/pqcscan/cli/: daemon_cmd.py  export.py  main.py  scan.py  sniff.py
src/pqcscan/compliance/: engine.py
src/pqcscan/core/: alg.py  bands.py  confidence.py  exposure.py  keyhealth.py  migration_score.py  mosca.py  pyast.py  remediation.py  remediation_snippets.py  srcstrip.py  types.py
src/pqcscan/daemon/: app.py  sse.py
src/pqcscan/probes/: _base.py  _code_walker.py  _crypto_constants.py  _dtls_probe.py  _ike_packet.py  _krb_asn1.py  _oqs_helper.py  _pcap.py  _quic.py  _registry.py  _sbom_helper.py  _severity.py  _ssh_parser.py  _starttls_probe.py  _tls13_keyschedule.py  _tls_probe.py  _udp_payloads.py  app_crypto_lib_pqc_support.py  app_dotenv_secrets.py  app_jwt_env_alg.py  app_nginx_jwt_validation.py  app_oauth_jwks.py  app_spring_properties.py  aux_clock_cert_validity.py  code_bandit.py  code_crypto_primitives.py  code_semgrep_pqc.py  code_ts_go.py  code_ts_java.py  code_ts_javascript.py  code_ts_php.py  code_ts_python.py  code_ts_rust.py  container_image_sbom.py  container_runtime_detect.py  cve_cargo_audit.py  cve_govulncheck.py  cve_grype.py  cve_npm_audit.py  cve_osv_offline.py  (+165 more)
src/pqcscan/renderers/: _report_context.py  _report_text.py  pdf_executive.py  pdf_technical.py  sarif.py  xlsx_bukukerja.py  xlsx_generic.py
src/pqcscan/runner/: capabilities.py  event_bus.py  runner.py  targets.py
src/pqcscan/store/: migrations.py  repo.py  schema.py
src/pqcscan/ui/: i18n.py  routes.py
src/pqcscan/util/: offline_pack.py  paths.py
tests/: conftest.py
tests/benchmark/: test_accuracy.py
tests/integration/: test_cli_scan.py  test_cli_subprocess.py  test_daemon_api.py  test_daemon_lifecycle.py  test_end_to_end.py  test_ui.py
tests/unit/: test_alg.py  test_alg_hardening.py  test_baselines_diff.py  test_capabilities.py  test_cbom_builder.py  test_cli_scan_gate.py  test_compliance_engine.py  test_compliance_qramm.py  test_confidence.py  test_cross_os_safety.py  test_dtls_probe.py  test_event_bus.py  test_exposure.py  test_fs_cert_chain.py  test_fs_cert_csr.py  test_fs_cert_expiry_horizon.py  test_fs_cert_pkcs7.py  test_fs_cert_revocation.py  test_fs_cert_sniff.py  test_fs_conf_caddy.py  test_fs_conf_envoy.py  test_fs_conf_f5.py  test_fs_conf_haproxy.py  test_fs_conf_netscaler.py  test_fs_conf_traefik.py  test_fs_keystore_pkcs12.py  test_host_gnutls_config.py  test_host_kernel_crypto_registry.py  test_host_nss_policy.py  test_host_openssl_fips_state.py  test_host_openssl_groups.py  test_host_pam_hashing.py  test_host_rng_config.py  test_host_ssh_moduli.py  test_host_tpm_sealed_keys.py  test_i18n.py  test_k8s_mesh_policy.py  test_keyhealth.py  test_migration_score.py  test_mosca.py  (+86 more)
(+57 files in other folders)
