[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pqcscan"
version = "0.1.0"
description = "Post-Quantum Cryptography readiness scanner (v2)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "jinja2>=3.1",
  "click>=8.1",
  "pydantic>=2.6",
  "loguru>=0.7",
  "cyclonedx-python-lib>=7.6",
  "cryptography>=42",
  "httpx>=0.27",
  "python-multipart>=0.0.7",
  "packaging>=23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
pqcscan = "pqcscan.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pqcscan"]

[tool.hatch.build.targets.wheel.force-include]
"src/pqcscan/ui/templates" = "pqcscan/ui/templates"
"src/pqcscan/ui/static"    = "pqcscan/ui/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pqcscan"]
