[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pqcscan"
version = "0.1.0"
description = "Post-Quantum Cryptography readiness scanner (v2)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "jinja2>=3.1",
  "click>=8.1",
  "pydantic>=2.6",
  "loguru>=0.7",
  "cyclonedx-python-lib>=7.6",
  "cryptography>=42",
  "httpx>=0.27",
  "python-multipart>=0.0.7",
  "packaging>=23",
  # Compliance YAML loader (engine + osv + ui/routes top-level import).
  "pyyaml>=6.0",
  # XLSX renderer top-level import (openpyxl is pure-Python, safe to pin).
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
]
build = [
  "pyinstaller>=6.0",
]
render = [
  # PDF renderer (lazy-imported). Needs cairo/pango/gdk-pixbuf system
  # libs at install time — leave as optional so headless deploys that
  # only need XLSX/JSON exports skip it.
  "weasyprint>=60",
]

[project.scripts]
pqcscan = "pqcscan.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pqcscan"]

[tool.hatch.build.targets.wheel.force-include]
"src/pqcscan/ui/templates"        = "pqcscan/ui/templates"
"src/pqcscan/ui/static"           = "pqcscan/ui/static"
"src/pqcscan/renderers/templates" = "pqcscan/renderers/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC", "RUF"]
ignore = [
  # Async-blocking-Path warnings: probes do sync I/O internally; rewriting
  # to anyio/aiofiles is invasive and out of scope for v0.1.
  "ASYNC240",
  "ASYNC221",
  # FastAPI's `Body(...)` and `Form(...)` defaults are the canonical pattern.
  "B008",
  # Style preference; we use `class Foo(str, Enum):` deliberately
  # for backward-compat with json.dumps(enum_value).
  "UP042",
]

[tool.ruff.lint.per-file-ignores]
# Tests use slightly looser style — terse setup blocks, long synthetic
# fixtures, etc. — that don't matter for correctness.
"tests/**/*.py" = ["E501", "E702"]

[tool.mypy]
# MVP profile: catch real type bugs (unused ignores, implicit Any return,
# implicit Optional, stale casts) without forcing pervasive annotation of
# every helper. Tighten toward `strict = true` as the codebase matures.
python_version = "3.11"
files = ["src/pqcscan"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# Optional/native deps that ship without type info: PyYAML and openpyxl
# have separate `types-*` packages we don't pull in for v0.1; weasyprint
# has no stubs at all (Cairo bindings).
module = ["yaml", "openpyxl", "openpyxl.styles", "weasyprint"]
ignore_missing_imports = true
